--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -1,35 +1,14 @@
 - name: Install nginx and letsencrypt
   apt:
     name: [ 'nginx', 'letsencrypt' ]
-    state: latest
+    state: present
 
+- name: Configure letsencrypt
+  include_tasks: configure_letsencrypt.yml
+  loop: "{{ domains | selectattr('enforce_https', 'equalto', true) }}"
+  loop_control:
+    loop_var: domain
 
-- name: Create letsencrypt directory
-  file:
-    name: /etc/letsencrypt
-    state: directory
-- name: Create letsencrypt certificate
-  shell: letsencrypt certonly -n --webroot -w /etc/letsencrypt -m {{letsencrypt_email}} --agree-tos -d {{item.domain}}
-  args:
-    creates: /etc/letsencrypt/live/{{item.domain}}
-  loop: "{{enforce_https}}"
-- name: Add letsencrypt cronjob for cert renewal
-  cron:
-    name: letsencrypt_renewal_{{item.domain}}
-    special_time: weekly
-    job: letsencrypt renew -n --webroot -w /etc/letsencrypt --agree-tos --cert-name {{item.domain}} --post-hook "systemctl reload nginx"
-  loop: "{{enforce_https}}"
-
-
-- name: Clear all nginx sites-enabled configs
-  file:
-    state: "{{item}}"
-    path: "/etc/nginx/sites-enabled/"
-    mode: '0755'
-  loop:
-    - absent
-    - directory
-  changed_when: False
 - name: Generate dhparams
   shell: openssl dhparam -out /etc/nginx/dhparams.pem 2048
   args:
@@ -38,18 +17,27 @@
   template:
     src: templates/nginx.conf.j2
     dest: /etc/nginx/nginx.conf
-- name: Enable nginx sites with enforcing https
-  template:
-    src: templates/enforce_https.j2
-    dest: /etc/nginx/sites-enabled/enforce_https@{{item.domain}}
-  loop: "{{enforce_https}}"
-- name: Enable nginx sites with custom rules
-  template:
-    src: templates/domain.j2
-    dest: /etc/nginx/sites-enabled/domain@{{item.domain}}
-  loop: "{{domains}}"
-- name: Reload nginx to activate sites
-  service:
-    name: nginx
-    state: reload
+  notify:
+    - Reload nginx
 
+- name: Remember sites-enabled paths
+  set_fact:
+    new_sites_enabled_paths: []
+- name: Configure enabled sites on port 80
+  include_tasks: configure_domain_80.yml
+  loop: "{{ domains | selectattr('enforce_https', 'equalto', true) }}"
+  loop_control:
+    loop_var: domain
+- name: Configure enabled sites on port 443
+  include_tasks: configure_domain_443.yml
+  loop: "{{ domains }}"
+  loop_control:
+    loop_var: domain
+- name: Drop obsolete sites
+  include_tasks: drop_obsolete_sites.yml
+
+- name: Add cronjob for reloading nginx daily
+  cron:
+    name: reload_nginx
+    special_time: daily
+    job: systemctl reload nginx
